img - novas imagens com formatações diferentes, html - removendo estrutura de grafico canvas e adicionando o method post para o formulario

--- a/projetos.html
+++ b/projetos.html
@@ -36,20 +36,11 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
     <main>
         <section id="section-projetos">
             <h1>Lista de Projetos</h1>
-            <!-- Gráfico de barras que sera usado com JS-->
-            <figure>
-                <canvas id="graficoBarras" width="200" height="200">
-                    Seu navegador não suporta o elemento canvas.
-                </canvas>
-                <figcaption>
-                    Gráfico: Impacto social por região.
-                </figcaption>
-            </figure>
 
             <article>
                 <h3>Presevar áreas de vegetação</h3>
                 <figure>
-                    <img src="./assets/img/PresevarVegetação.png"
+                    <img src="./assets/img/PresevarVegetação.jpeg"
                         alt="Pessoas sorridente trabalha unida para cuidar de uma área verde, em um cenário natural."
                         loading="lazy">
                 </figure>
@@ -93,7 +84,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <article>
                 <h3>Mapear locais que possa ter um plantios</h3>
                 <figure>
-                    <img src="./assets/img/mapearPlantios.png"
+                    <img src="./assets/img/mapearPlantios.webp"
                         alt=" Um mapa ilustrado de uma área rural-urbana, indicando com ícones verdes possíveis locais para plantio e cultivo."
                         loading="lazy">
                 </figure>
@@ -129,7 +120,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
 
             <!-- area de doação que sera manipulado por js -->
             <article>
-                <form action="/projetos/doacoes">
+                <form action="/projetos/doacoes" method="post">
                     <h3 class="h3-doacoes">Doar</h3>
                     <button type="button">R$5</button>
                     <button type="button">R$50</button>
