Index - corregindo endereço de rota; Geral -  corregindo strutura de pasta do projeto e atualizando os caminhos

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Guardiões do Ar</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar">
             <a href="./index.html" class="logo-link">
-                <img src="./assets/img/logo.png"
+                <img src="./img/logo.png"
                     alt="log da ONG, representa uma folha sendo protegida por uma suave brisa, simbolizando a guarda e o cuidado com o ar e a natureza."
                     class="logo">
             </a>
@@ -40,7 +40,7 @@
                 </div>
                 <div>
                     <h3>Fazer doação</h3>
-                    <a href="projetos.html#section-doar" class="a-botao">Doar</a>
+                    <a href="./projetos.html#section-doar" class="a-botao">Doar</a>
                 </div>
             </div>
         </section>
@@ -54,7 +54,7 @@
                 <p>Consentizar pessoas a contribuir com a melhora e o bem estar do planeta,<br>se aproximandondo mais da
                     natureza</p>
                 <figure>
-                    <img src="./assets/img/cuidandoDoAmbiente.png"
+                    <img src="./img/cuidandoDoAmbiente.png"
                         alt="Ilustração minimalista de um homem plantando uma árvore em seu quintal, sob o planeta Terra que flutua em um céu sereno."
                         loading="lazy">
                 </figure>
@@ -70,7 +70,7 @@
                     <li>Mapear locais que possa ter um plantios</li>
                 </ul>
                 <figure>
-                    <img src="./assets/img/viveiroComunitario.png"
+                    <img src="./img/viveiroComunitario.png"
                         alt="Ilustração de uma comunidade diversa e colaborativa trabalhando junta no plantio de mudas em um viveiro de plantas."
                         loading="lazy">
                 </figure>
@@ -81,7 +81,7 @@
         <section id="section-contato">
             <h2>Meios de comunicação</h2>
             <figure>
-                <img src="./assets/img/conexao.png" alt="Uma pessoa em sua mesa de trabalho sorri ao receber uma notificação de meta ambiental atingida em seu computador." loading="lazy">
+                <img src="./img/conexao.png" alt="Uma pessoa em sua mesa de trabalho sorri ao receber uma notificação de meta ambiental atingida em seu computador." loading="lazy">
             </figure>
             <article>
                 <h3>Contados da ONG</h3>
@@ -135,6 +135,6 @@
         </p>
     </footer>
 
-    <script type="module" src="./assets/js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
