--- a/projetos.html
+++ b/projetos.html
@@ -17,7 +17,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
     <header>
         <nav class="navbar">
             <a href="./index.html" class="logo-link">
-                <img src="./assets/img/logo.png"
+                <img src="./img/logo.png"
                     alt="log da ONG, representa uma folha sendo protegida por uma suave brisa, simbolizando a guarda e o cuidado com o ar e a natureza."
                     class="logo">
             </a>
@@ -40,7 +40,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <article>
                 <h3>Presevar áreas de vegetação</h3>
                 <figure>
-                    <img src="./assets/img/PresevarVegetação.jpeg"
+                    <img src="./img/PresevarVegetação.jpeg"
                         alt="Pessoas sorridente trabalha unida para cuidar de uma área verde, em um cenário natural."
                         loading="lazy">
                 </figure>
@@ -51,7 +51,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <article>
                 <h3>Criar um viveiro comunitario</h3>
                 <figure>
-                    <img src="./assets/img/viveiroComunitario2.png"
+                    <img src="./img/viveiroComunitario2.png"
                         alt="Diversas pessoas de todas as idades colaboram em um animado viveiro de mudas, plantando e cuidando de plantas em vasos."
                         loading="lazy">
                 </figure>
@@ -62,7 +62,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <article>
                 <h3>Plantar para o própio consumo</h3>
                 <figure>
-                    <img src="./assets/img/própioConsumo.png"
+                    <img src="./img/própioConsumo.png"
                         alt="Uma mulher feliz cultiva sua horta pessoal cheia de vegetais e frutas, com uma placa indicando 'CULTIVO PRÓPRIO'"
                         loading="lazy">
                 </figure>
@@ -73,7 +73,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <article>
                 <h3>Limpar áreas degradadas</h3>
                 <figure>
-                    <img src="./assets/img/LimparAreas.png"
+                    <img src="./img/LimparAreas.png"
                         alt="Um grupo de pessoas, incluindo adultos e crianças, colabora para limpar uma paisagem árida e poluída, com a placa 'ÁREA EM RECUPERAÇÃO'."
                         loading="lazy">
                 </figure>
@@ -84,7 +84,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <article>
                 <h3>Mapear locais que possa ter um plantios</h3>
                 <figure>
-                    <img src="./assets/img/mapearPlantios.webp"
+                    <img src="./img/mapearPlantios.webp"
                         alt=" Um mapa ilustrado de uma área rural-urbana, indicando com ícones verdes possíveis locais para plantio e cultivo."
                         loading="lazy">
                 </figure>
@@ -99,7 +99,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <p>Para se torna voluntario é necessário um cadastro na plataforma,<br>com isso você tera acesso para
                 participar em qualquer projeto da ONG</p>
             <figure>
-                <img src="./assets/img/apertoDeMao.png"
+                <img src="./img/apertoDeMao.png"
                     alt="Ilustração simbólica de um aperto de mão com um planeta terra em cima e uma paisagem atras"
                     loading="lazy">
             </figure>
@@ -114,7 +114,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             <p>As doações realizadas são para fins da melhora do meio ambiente, por meio de projetos da instituição</p>
 
             <figure>
-                <img src="./assets/img/cofreNatural.png"
+                <img src="./img/cofreNatural.png"
                     alt="Em uma paisagem natural, uma mão coloca uma moeda em um cofrinho com formato de planta, simbolizando o investimento no meio ambiente.">
             </figure>
 
@@ -148,6 +148,6 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
         </p>
     </footer>
 
-    <script type="module" src="./assets/js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
