projetos.html - correção do caminho CSS

--- a/projetos.html
+++ b/projetos.html
@@ -9,7 +9,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos - Guardiões do Ar</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
