Img - alteração logo; cadastro.html - class em botoes saiba mais e nova div com uma lista; cadastro.html - remoção, virgula em lugar inadequado

--- a/cadastro.html
+++ b/cadastro.html
@@ -39,7 +39,7 @@ Validação em JS para checar se todos campos foram preenchidos. -->
             <section>
                 <h2>Cadastrar</h2>
                 <!-- formulario com mascara de validação e com alguns campos obrigatórios -->
-                <form action="/voluntariado/cadastro" method="post" class="form-voluntariado", id="form-cadastro">
+                <form action="/voluntariado/cadastro" method="post" class="form-voluntariado" id="form-cadastro">
                     <fieldset>
                         <legend><strong>Dados Pessoais</strong></legend>
                         <label for="nome">Primeiro nome</label>
