--- a/projetos.html
+++ b/projetos.html
@@ -35,7 +35,16 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
 
     <main>
         <section id="section-projetos">
-            <h1>Lista de Projetos</h1>
+            <div>
+                <h1>Lista de Projetos</h1>
+                <ul>
+                    <li>Presevar áreas de vegetação</li>
+                    <li>Criar um viveiro comunitario</li>
+                    <li>Plantar para o própio consumo</li>
+                    <li>Limpar áres degradadas</li>
+                    <li>Mapear locais que possa ter um plantios</li>
+                </ul>
+            </div>
 
             <article>
                 <h3>Presevar áreas de vegetação</h3>
@@ -44,8 +53,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
                         alt="Pessoas sorridente trabalha unida para cuidar de uma área verde, em um cenário natural."
                         loading="lazy">
                 </figure>
-                <button type="button">Saiba mais</button>
-                <div class="saiba-mais PresevarVegetação"></div> <!-- sera usado para adionar as descrições com js -->
+                <button type="button" class="saiba-mais PresevarVegetação">Saiba mais</button>
             </article>
 
             <article>
@@ -55,8 +63,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
                         alt="Diversas pessoas de todas as idades colaboram em um animado viveiro de mudas, plantando e cuidando de plantas em vasos."
                         loading="lazy">
                 </figure>
-                <button type="button">Saiba mais</button>
-                <div class="saiba-mais viveiroComunitario"></div> <!-- sera usado para adionar as descrições com js -->
+                <button type="button" class="saiba-mais viveiroComunitario">Saiba mais</button>
             </article>
 
             <article>
@@ -66,8 +73,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
                         alt="Uma mulher feliz cultiva sua horta pessoal cheia de vegetais e frutas, com uma placa indicando 'CULTIVO PRÓPRIO'"
                         loading="lazy">
                 </figure>
-                <button type="button">Saiba mais</button>
-                <div class="saiba-mais própioConsumo"></div> <!-- sera usado para adionar as descrições com js -->
+                <button type="button" class="saiba-mais própioConsumo">Saiba mais</button>
             </article>
 
             <article>
@@ -77,8 +83,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
                         alt="Um grupo de pessoas, incluindo adultos e crianças, colabora para limpar uma paisagem árida e poluída, com a placa 'ÁREA EM RECUPERAÇÃO'."
                         loading="lazy">
                 </figure>
-                <button type="button">Saiba mais</button>
-                <div class="saiba-mais LimparAreas"></div> <!-- sera usado para adionar as descrições com js -->
+                <button type="button" class="saiba-mais LimparAreas">Saiba mais</button>
             </article>
 
             <article>
@@ -88,8 +93,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
                         alt=" Um mapa ilustrado de uma área rural-urbana, indicando com ícones verdes possíveis locais para plantio e cultivo."
                         loading="lazy">
                 </figure>
-                <button type="button">Saiba mais</button>
-                <div class="saiba-mais mapearPlantios"></div> <!-- sera usado para adionar as descrições com js -->
+                <button type="button" class="saiba-mais mapearPlantios">Saiba mais</button>
             </article>
         </section>
 
