navegação com dropdow

--- a/cadastro.html
+++ b/cadastro.html
@@ -21,13 +21,21 @@ Validação em JS para checar se todos campos foram preenchidos. -->
                     class="logo">
             </a>
             <ul class="nav-list">
-                <li><a href="./index.html#section-home">Home</a></li>
-                <li><a href="./index.html#section-sobre">Sobre</a></li>
-                <li><a href="./index.html#section-contato">Contato</a></li>
-                <li><a href="./projetos.html">Projetos</a></li>
+            <li class="dropdown">
+                <a href="#section-home">Home</a>
+                <ul>
+                <li><a href="#section-sobre">Sobre</a></li>
+                <li><a href="#section-contato">Contato</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="./projetos.html">Projetos</a>
+                <ul>
                 <li><a href="./projetos.html#section-voluntariar">Voluntariar</a></li>
                 <li><a href="./projetos.html#section-doar">Doar</a></li>
-                <li><a href="./cadastro.html">Cadastro</a></li>
+                </ul>
+            </li>
+            <li><a href="./cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
     </header>
