--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
                     class="logo">
             </a>
             <ul class="nav-list">
-                <li><a href="#section-home">Home</a></li>
+            <li class="dropdown">
+                <a href="#section-home">Home</a>
+                <ul>
                 <li><a href="#section-sobre">Sobre</a></li>
                 <li><a href="#section-contato">Contato</a></li>
-                <li><a href="./projetos.html">Projetos</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="./projetos.html">Projetos</a>
+                <ul>
                 <li><a href="./projetos.html#section-voluntariar">Voluntariar</a></li>
                 <li><a href="./projetos.html#section-doar">Doar</a></li>
-                <li><a href="./cadastro.html">Cadastro</a></li>
+                </ul>
+            </li>
+            <li><a href="./cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
     </header>
