Correção de rotas na barra de navegação

--- a/cadastro.html
+++ b/cadastro.html
@@ -22,20 +22,20 @@ Validação em JS para checar se todos campos foram preenchidos. -->
             </a>
             <ul class="nav-list">
             <li class="dropdown">
-                <a href="#section-home">Home</a>
+                <a href="./index.html#section-home">Home</a>
                 <ul>
-                <li><a href="#section-sobre">Sobre</a></li>
-                <li><a href="#section-contato">Contato</a></li>
+                <li><a href="./index.html#section-sobre">Sobre</a></li>
+                <li><a href="./index.html#section-contato">Contato</a></li>
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="./projetos.html">Projetos</a>
+                <a href="./projetos.html#section-projetos">Projetos</a>
                 <ul>
                 <li><a href="./projetos.html#section-voluntariar">Voluntariar</a></li>
                 <li><a href="./projetos.html#section-doar">Doar</a></li>
                 </ul>
             </li>
-            <li><a href="./cadastro.html">Cadastro</a></li>
+            <li><a href="#main-cadastro">Cadastro</a></li>
             </ul>
         </nav>
     </header>
