--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="./projetos.html">Projetos</a>
+                <a href="./projetos.html#section-projetos">Projetos</a>
                 <ul>
                 <li><a href="./projetos.html#section-voluntariar">Voluntariar</a></li>
                 <li><a href="./projetos.html#section-doar">Doar</a></li>
