--- a/projetos.html
+++ b/projetos.html
@@ -23,17 +23,17 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             </a>
             <ul class="nav-list">
             <li class="dropdown">
-                <a href="#section-home">Home</a>
+                <a href="./index.html#section-home">Home</a>
                 <ul>
-                <li><a href="#section-sobre">Sobre</a></li>
-                <li><a href="#section-contato">Contato</a></li>
+                <li><a href="./index.html#section-sobre">Sobre</a></li>
+                <li><a href="./index.html#section-contato">Contato</a></li>
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="./projetos.html">Projetos</a>
+                <a href="#section-projetos">Projetos</a>
                 <ul>
-                <li><a href="./projetos.html#section-voluntariar">Voluntariar</a></li>
-                <li><a href="./projetos.html#section-doar">Doar</a></li>
+                <li><a href="#section-voluntariar">Voluntariar</a></li>
+                <li><a href="#section-doar">Doar</a></li>
                 </ul>
             </li>
             <li><a href="./cadastro.html">Cadastro</a></li>
