feat(acessibilidade): implementa modo noturno, contraste e navegação por teclado

--- a/cadastro.html
+++ b/cadastro.html
@@ -20,7 +20,7 @@ Validação em JS para checar se todos campos foram preenchidos. -->
                     alt="log da ONG, representa uma folha sendo protegida por uma suave brisa, simbolizando a guarda e o cuidado com o ar e a natureza."
                     class="logo">
             </a>
-            <ul class="nav-list">
+            <ul class="nav-list" id="nav-menu">
             <li class="dropdown">
                 <a href="./index.html#section-home">Home</a>
                 <ul>
@@ -37,6 +37,10 @@ Validação em JS para checar se todos campos foram preenchidos. -->
             </li>
             <li><a href="#main-cadastro">Cadastro</a></li>
             </ul>
+            <label class="interruptor-tema" for="modo-noturno-toggle">
+                <input type="checkbox" id="modo-noturno-toggle" aria-label="Ativar modo escuro"/>
+                <span class="deslizante"></span>
+            </label>
         </nav>
     </header>
 
