--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             </li>
             <li><a href="./cadastro.html">Cadastro</a></li>
             </ul>
+            <label class="interruptor-tema" for="modo-noturno-toggle">
+                <input type="checkbox" id="modo-noturno-toggle" aria-label="Ativar modo escuro"/>
+                <span class="deslizante"></span>
+            </label>
         </nav>
     </header>
     <!-- todo conteudo principalfica dentro do main -->
