--- a/projetos.html
+++ b/projetos.html
@@ -21,7 +21,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
                     alt="log da ONG, representa uma folha sendo protegida por uma suave brisa, simbolizando a guarda e o cuidado com o ar e a natureza."
                     class="logo">
             </a>
-            <ul class="nav-list">
+            <ul class="nav-list" id="nav-menu">
             <li class="dropdown">
                 <a href="./index.html#section-home">Home</a>
                 <ul>
@@ -38,6 +38,10 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
             </li>
             <li><a href="./cadastro.html">Cadastro</a></li>
             </ul>
+            <label class="interruptor-tema" for="modo-noturno-toggle">
+                <input type="checkbox" id="modo-noturno-toggle" aria-label="Ativar modo escuro"/>
+                <span class="deslizante"></span>
+            </label>
         </nav>
     </header>
 
