--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     alt="log da ONG, representa uma folha sendo protegida por uma suave brisa, simbolizando a guarda e o cuidado com o ar e a natureza."
                     class="logo">
             </a>
-            <ul class="nav-list" id="nav-menu">
+            <ul class="nav-list">
             <li class="dropdown">
                 <a href="#section-home">Home</a>
                 <ul>
@@ -33,10 +33,6 @@
             </li>
             <li><a href="./cadastro.html">Cadastro</a></li>
             </ul>
-            <label class="interruptor-tema" for="modo-noturno-toggle">
-                <input type="checkbox" id="modo-noturno-toggle" aria-label="Ativar modo escuro"/>
-                <span class="deslizante"></span>
-            </label>
         </nav>
     </header>
     <!-- todo conteudo principalfica dentro do main -->
@@ -47,11 +43,11 @@
             <!-- Chamadas para ação que sera usado com JS -->
             <div class="div-home">
                 <div>
-                    <h2>Seja voluntário</h2>
+                    <h3>Seja voluntário</h3>
                     <a href="./cadastro.html" class="a-botao">Voluntariar</a>
                 </div>
                 <div>
-                    <h2>Fazer doação</h2>
+                    <h3>Fazer doação</h3>
                     <a href="./projetos.html#section-doar" class="a-botao">Doar</a>
                 </div>
             </div>
@@ -99,9 +95,8 @@
                 <h3>Contados da ONG</h3>
                 <address>
                     (84) 99887-2211<br>
-                    contato@guardioesdoar.org.br<br>
-                    @guardioesdoar<br>
-                    Rua das Sementes, 123 - Brisa Potiguar, Natal - RN, CEP: 59000-123
+                    guardioesdoar@gmail.com<br>
+                    @guardioesdoar
                 </address>
             </article>
 
@@ -110,25 +105,25 @@
                 <p>Deseja receber atualizações sobre a ONG?, adicione seu contado e sera sempre informado</p>
                 <!-- formulario para contato que sera implementado no js pra enviar so se preencher algum campo  do dois campos iniciais -->
                 <form action="/index/contado" method="post">
-                    <label for="telefone">Número de telefone</label>
+                    <label for="telefone">Número de telefone</label><br>
                     <input type="tel" name="telefone" id="telefone" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"
-                        placeholder="(00) 00000-0000" title="Formato: (00) 00000-0000">
+                        placeholder="(00) 00000-0000" title="Formato: (00) 00000-0000"><br>
 
-                    <label for="email">E-mail</label>
-                    <input type="email" name="e-mail" id="email" placeholder="ex.: email@gmail.com">
+                    <label for="email">E-mail</label><br>
+                    <input type="email" name="e-mail" id="email" placeholder="ex.: email@gmail.com"><br>
 
-                    <label for="interesse">Área de interesse</label>
+                    <label for="interesse">Área de interesse</label><br>
                     <select name="interesse" id="interesse">
                         <option value="reflorestamento">Reflorestamento</option>
                         <option value="dicas">Dicas Ambientais</option>
                         <option value="geral">Geral</option>
-                    </select>
+                    </select><br>
 
                     <label for="frequencia">Frequência de envio</label>
                     <select name="frequencia" id="frequencia">
                         <option value="semanal">Semanal</option>
                         <option value="anual">Anual</option>
-                    </select>
+                    </select><br>
 
                     <button type="submit">Enviar</button>
                 </form>
