feat(otimizacao): minifica CSS/JS e otimiza imagens

--- a/cadastro.html
+++ b/cadastro.html
@@ -8,7 +8,7 @@ Validação em JS para checar se todos campos foram preenchidos. -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar - Guardiões do Ar</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body>
@@ -151,6 +151,6 @@ Validação em JS para checar se todos campos foram preenchidos. -->
         </p>
     </footer>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/main.min.js"></script>
 </body>
 </html>
