--- a/projetos.html
+++ b/projetos.html
@@ -9,7 +9,7 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos - Guardiões do Ar</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body>
@@ -165,6 +165,6 @@ Filtro em JS (ex: botão “mostrar só reflorestamento”).
         </p>
     </footer>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/main.min.js"></script>
 </body>
 </html>
